--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cross_file: ^0.3.4+2
   qr_flutter: ^4.1.0
   qr_code_scanner_plus: ^2.0.12
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   flutter_test:
