--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   cross_file: ^0.3.4+2
   qr_flutter: ^4.1.0
   qr_code_scanner_plus: ^2.0.12
-  flutter_local_notifications: ^19.4.2
+  hive_flutter: ^1.1.0
+  google_generative_ai: ^0.4.7
+  home_widget: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_launcher_icons: "^0.14.4"
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
